Implement signature based hooking and small code cleanup
Better signatures have to be created in the future to support roughly all retail r5apex modules. Maybe also load a file from the disk containing offsets for instant hooking before falling back to sigscan

--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -173,7 +173,9 @@
   <ItemGroup>
     <ClInclude Include="console.h" />
     <ClInclude Include="hooks.h" />
+    <ClInclude Include="patterns.h" />
     <ClInclude Include="r5dev.h" />
+    <ClInclude Include="sigscan.h" />
     <ClInclude Include="utilities.h" />
   </ItemGroup>
   <ItemGroup>
