--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="patterns.h" />
     <ClInclude Include="r5dev.h" />
     <ClInclude Include="sigscan.h" />
+    <ClInclude Include="structs.h" />
     <ClInclude Include="utilities.h" />
   </ItemGroup>
   <ItemGroup>
