--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -194,7 +194,9 @@
     <ClInclude Include="..\imgui\include\imstb_truetype.h" />
     <ClInclude Include="include\console.h" />
     <ClInclude Include="include\hooks.h" />
+    <ClInclude Include="include\id3dx.h" />
     <ClInclude Include="include\opcptc.h" />
+    <ClInclude Include="include\overlay.h" />
     <ClInclude Include="include\patterns.h" />
     <ClInclude Include="include\r5dev.h" />
     <ClInclude Include="include\structs.h" />
@@ -211,7 +213,9 @@
     <ClCompile Include="src\console.cpp" />
     <ClCompile Include="src\dllmain.cpp" />
     <ClCompile Include="src\hooks.cpp" />
+    <ClCompile Include="src\id3dx.cpp" />
     <ClCompile Include="src\opcptc.cpp" />
+    <ClCompile Include="src\overlay.cpp" />
     <ClCompile Include="src\utility.cpp" />
   </ItemGroup>
   <ItemGroup>
